--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bcrypt": "^6.0.0",
     "dotenv": "^17.2.0",
     "joi": "^17.13.3",
+    "nanoid": "^5.1.5",
     "node-pg-migrate": "^8.0.3",
     "nodemon": "^3.1.10",
     "pg": "^8.16.3"
